# MPP

./: .gitignore  CMakeLists.txt
Seminar1/: CMakeLists.txt  main.cpp
Seminar2/: CMakeLists.txt  main.cpp
Seminar4/: CMakeLists.txt  main.cpp
Seminar5/: CMakeLists.txt  main.cpp
Trying/: CMakeLists.txt  trying.cpp
